load("//tools:cpplint.bzl", "cpplint")
load("//tools:dlinear.bzl", "dlinear_cc_library", "dlinear_srcs")

package(default_visibility = [
    "//dlinear:__subpackages__",
    "//pydlinear:__subpackages__",
    "//test:__subpackages__",
])

dlinear_srcs(
    name = "srcs",
    hdrs = glob([
        "*.h",
        "*.hpp",
    ]) + ["//third_party/com_github_robotlocomotion_drake:hdrs"],
    subfolder = "symbolic",
)

dlinear_cc_library(
    name = "prefix_printer",
    srcs = ["PrefixPrinter.cpp"],
    hdrs = ["PrefixPrinter.h"],
    implementation_deps = [
        ":literal",
        "//dlinear/libs:gmp",
    ],
    deps = [":symbolic"],
)

dlinear_cc_library(
    name = "symbolic",
    srcs = ["symbolic.cpp"],
    hdrs = ["symbolic.h"],
    implementation_deps = [
        "//dlinear/libs:gmp",
        "//dlinear/util:exception",
    ],
    deps = [
        ":literal",
        "//dlinear/util:logging",
        "//third_party/com_github_robotlocomotion_drake:drake_symbolic",
    ],
)

dlinear_cc_library(
    name = "formula_visitor",
    srcs = ["FormulaVisitor.cpp"],
    hdrs = ["FormulaVisitor.h"],
    implementation_deps = ["//dlinear/util:exception"],
    deps = [
        ":symbolic",
        "//dlinear/util:config",
        "//dlinear/util:stats",
    ],
)

dlinear_cc_library(
    name = "linear_formula_flattener",
    srcs = ["LinearFormulaFlattener.cpp"],
    hdrs = ["LinearFormulaFlattener.h"],
    implementation_deps = [
        "//dlinear/libs:gmp",
        "//dlinear/util:exception",
    ],
    deps = [
        ":symbolic",
        "//dlinear/util:config",
    ],
)

dlinear_cc_library(
    name = "literal",
    srcs = ["literal.cpp"],
    hdrs = ["literal.h"],
    deps = [
        "//dlinear/util:logging",
        "//third_party/com_github_robotlocomotion_drake:drake_symbolic",
    ],
)

dlinear_cc_library(
    name = "environment",
    hdrs = ["environment.h"],
    deps = ["//third_party/com_github_robotlocomotion_drake:drake_symbolic"],
)

dlinear_cc_library(
    name = "expression_evaluator",
    srcs = ["ExpressionEvaluator.cpp"],
    hdrs = ["ExpressionEvaluator.h"],
    implementation_deps = [
        ":literal",
        "//dlinear/libs:gmp",
        "//dlinear/util:exception",
    ],
    deps = [
        ":symbolic",
        "//dlinear/util:box",
    ],
)

dlinear_cc_library(
    name = "nnfizier",
    srcs = ["Nnfizer.cpp"],
    hdrs = ["Nnfizer.h"],
    implementation_deps = ["//dlinear/util:logging"],
    deps = [
        ":symbolic",
        "//dlinear/util:config",
    ],
)

dlinear_cc_library(
    name = "cnfizer",
    srcs = ["NaiveCnfizer.cpp"],
    hdrs = ["NaiveCnfizer.h"],
    implementation_deps = ["//dlinear/util:exception"],
    deps = [
        ":formula_visitor",
        ":nnfizier",
        ":symbolic",
    ],
)

dlinear_cc_library(
    name = "if_then_else_eliminator",
    srcs = ["IfThenElseEliminator.cpp"],
    hdrs = ["IfThenElseEliminator.h"],
    implementation_deps = [
        ":nnfizier",
        "//dlinear/libs:gmp",
        "//dlinear/util:timer",
    ],
    deps = [
        ":literal",
        ":symbolic",
        "//dlinear/util:config",
        "//dlinear/util:stats",
    ],
)

dlinear_cc_library(
    name = "predicate_abstractor",
    srcs = ["PredicateAbstractor.cpp"],
    hdrs = ["PredicateAbstractor.h"],
    implementation_deps = [
        "//dlinear/util:stats",
        "//dlinear/util:timer",
    ],
    deps = [
        ":formula_visitor",
        ":linear_formula_flattener",
        ":literal",
        ":symbolic",
        "//dlinear/util:config",
    ],
)

dlinear_cc_library(
    name = "plaisted_greenbaum_cnfizer",
    srcs = ["PlaistedGreenbaumCnfizer.cpp"],
    hdrs = ["PlaistedGreenbaumCnfizer.h"],
    implementation_deps = [
        "//dlinear/util:exception",
        "//dlinear/util:stats",
        "//dlinear/util:timer",
    ],
    deps = [
        ":cnfizer",
        ":formula_visitor",
        ":literal",
        ":nnfizier",
        ":symbolic",
        "//dlinear/util:config",
    ],
)

dlinear_cc_library(
    name = "tseitin_cnfizer",
    srcs = ["TseitinCnfizer.cpp"],
    hdrs = ["TseitinCnfizer.h"],
    implementation_deps = [
        "//dlinear/util:exception",
        "//dlinear/util:stats",
        "//dlinear/util:timer",
    ],
    deps = [
        ":cnfizer",
        ":formula_visitor",
        ":literal",
        ":symbolic",
        "//dlinear/util:config",
    ],
)

cpplint()
