load("//tools:dlinear.bzl", "dlinear_cc_library")
load("//tools:cpplint.bzl", "cpplint")

package(default_visibility = [
    "//benchmark:__subpackages__",
    "//dlinear:__subpackages__",
    "//pydlinear:__subpackages__",
    "//test:__subpackages__",
])

dlinear_cc_library(
    name = "argparser",
    srcs = ["ArgParser.cpp"],
    hdrs = ["ArgParser.h"],
    deps = [
        ":config",
        ":exception",
        ":filesystem",
        ":logging",
        "//dlinear:version",
        "@argparse",
    ] + select({
        "//tools:enabled_qsoptex": ["//dlinear/libs:qsopt_ex"],
        "//conditions:default": [],
    }) + select({
        "//tools:enabled_soplex": ["//dlinear/libs:soplex"],
        "//conditions:default": [],
    }),
)

dlinear_cc_library(
    name = "config",
    srcs = ["Config.cpp"],
    hdrs = [
        "Config.h",
        "OptionValue.hpp",
    ],
    deps = [
        ":exception",
        ":filesystem",
    ],
)

dlinear_cc_library(
    name = "exception",
    hdrs = ["exception.h"],
    deps = [
        ":logging",
        "@spdlog",
    ],
)

dlinear_cc_library(
    name = "logging",
    srcs = ["logging.cpp"],
    hdrs = ["logging.h"],
    deps = ["@spdlog"],
)

dlinear_cc_library(
    name = "stats",
    srcs = ["Stats.cpp"],
    hdrs = ["Stats.h"],
    deps = [
        ":timer",
        "@spdlog",
    ],
)

dlinear_cc_library(
    name = "infinity",
    srcs = ["Infinity.cpp"],
    hdrs = ["Infinity.h"],
    visibility = [
        "//benchmark:__subpackages__",
        "//dlinear:__subpackages__",
        "//test:__subpackages__",
        "//third_party:__subpackages__",
    ],
    deps = [
        ":config",
        ":exception",
        ":logging",
        "//dlinear/libs:gmp",
    ] + select({
        "//tools:enabled_qsoptex": ["//dlinear/libs:qsopt_ex"],
        "//conditions:default": [],
    }) + select({
        "//tools:enabled_soplex": ["//dlinear/libs:soplex"],
        "//conditions:default": [],
    }),
)

dlinear_cc_library(
    name = "box",
    srcs = ["Box.cpp"],
    hdrs = [
        "Box.h",
        "RoundingModeGuard.hpp",
    ],
    deps = [
        ":logging",
        ":math",
        "//dlinear/symbolic",
    ],
)

dlinear_cc_library(
    name = "math",
    srcs = ["math.cpp"],
    hdrs = ["math.h"],
    deps = [
        ":exception",
        ":logging",
        "//dlinear/libs:gmp",
    ],
)

dlinear_cc_library(
    name = "scoped_structures",
    hdrs = [
        "ScopedUnorderedMap.hpp",
        "ScopedUnorderedSet.hpp",
        "ScopedVector.hpp",
    ],
    deps = [":exception"],
)

dlinear_cc_library(
    name = "filesystem",
    srcs = ["filesystem.cpp"],
    hdrs = ["filesystem.h"],
    deps = [":logging"],
)

dlinear_cc_library(
    name = "timer",
    srcs = ["Timer.cpp"],
    hdrs = ["Timer.h"],
    deps = [":logging"],
)

dlinear_cc_library(
    name = "interrupt",
    srcs = ["interrupt.cpp"],
    hdrs = ["interrupt.h"],
)

dlinear_cc_library(
    name = "sorted_vector",
    hdrs = ["SortedVector.hpp"],
)

dlinear_cc_library(
    name = "signal_handler_guard",
    srcs = ["SignalHandlerGuard.cpp"],
    hdrs = ["SignalHandlerGuard.h"],
)

dlinear_cc_library(
    name = "bit_increment_iterator",
    srcs = ["BitIncrementIterator.cpp"],
    hdrs = ["BitIncrementIterator.h"],
    deps = [":exception"],
)

dlinear_cc_library(
    name = "graph",
    hdrs = ["Graph.hpp"],
)

dlinear_cc_library(
    name = "numeric_data_container",
    hdrs = ["NumericDataContainer.hpp"],
)

cpplint()
